fix(design): Improve spacing on /weekly

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -238,4 +238,8 @@ footer {
       border-bottom-left-radius: 0;
     }
   }
+
+  &__overview {
+    @include stack;
+  }
 }
